#
# File: examples/metrics/CMakeLists.txt
# Part of commonpp.
#
# Distributed under the 2-clause BSD licence (See LICENCE.TXT file at the
# project root).
#
# Copyright (c) 2015 Thomas Sanchez.  All rights reserved.
#

add_executable(gelf_example main.cpp)
target_link_libraries(gelf_example commonpp)
