#
# File: examples/metrics/CMakeLists.txt
# Part of commonpp.
#
# Distributed under the 2-clause BSD licence (See LICENCE.TXT file at the
# project root).
#
# Copyright (c) 2015 Thomas Sanchez.  All rights reserved.
#

add_executable(metrics_example main.cpp)
target_link_libraries(metrics_example ${COMMON_LIBRARIES})
